src/lowering/snapshots/rusty__lowering__calls__tests__complex_call_statement_in_assignment.snap
---
source: src/lowering/calls.rs
expression: "unit.implementations[1]"
---
Implementation {
    name: "main",
    type_name: "main",
    linkage: Internal,
    pou_type: Function,
    statements: [
        ExpressionList {
            expressions: [
                Allocation {
                    name: "__complexFunc0",
                    reference_type: "STRING",
                },
                CallStatement {
                    operator: ReferenceExpr {
                        kind: Member(
                            Identifier {
                                name: "complexFunc",
                            },
                        ),
                        base: None,
                    },
                    parameters: Some(
                        ExpressionList {
                            expressions: [
                                ReferenceExpr {
                                    kind: Member(
                                        Identifier {
                                            name: "__complexFunc0",
                                        },
                                    ),
                                    base: None,
                                },
                            ],
                        },
                    ),
                },
                Assignment {
                    left: ReferenceExpr {
                        kind: Member(
                            Identifier {
                                name: "a",
                            },
                        ),
                        base: None,
                    },
                    right: ReferenceExpr {
                        kind: Member(
                            Identifier {
                                name: "__complexFunc0",
                            },
                        ),
                        base: None,
                    },
                },
            ],
        },
    ],
    location: SourceLocation {
        span: Range(14:12 - 14:31),
        file: Some(
            "<internal>",
        ),
    },
    name_location: SourceLocation {
        span: Range(8:17 - 8:21),
        file: Some(
            "<internal>",
        ),
    },
    end_location: SourceLocation {
        span: Range(15:8 - 15:20),
        file: Some(
            "<internal>",
        ),
    },
    overriding: false,
    generic: false,
    access: None,
}
