src/lowering/snapshots/rusty__lowering__calls__tests__complex_call_statement_in_call.snap
---
source: src/lowering/calls.rs
expression: "unit.implementations[1]"
---
Implementation {
    name: "main",
    type_name: "main",
    linkage: Internal,
    pou_type: Function,
    statements: [
        ExpressionList {
            expressions: [
                Allocation {
                    name: "__complexFunc0",
                    reference_type: "STRING",
                },
                CallStatement {
                    operator: ReferenceExpr {
                        kind: Member(
                            Identifier {
                                name: "complexFunc",
                            },
                        ),
                        base: None,
                    },
                    parameters: Some(
                        ExpressionList {
                            expressions: [
                                Assignment {
                                    left: ReferenceExpr {
                                        kind: Member(
                                            Identifier {
                                                name: "complexFunc",
                                            },
                                        ),
                                        base: None,
                                    },
                                    right: ReferenceExpr {
                                        kind: Member(
                                            Identifier {
                                                name: "__complexFunc0",
                                            },
                                        ),
                                        base: None,
                                    },
                                },
                                Assignment {
                                    left: ReferenceExpr {
                                        kind: Member(
                                            Identifier {
                                                name: "x",
                                            },
                                        ),
                                        base: None,
                                    },
                                    right: LiteralString {
                                        value: "hello",
                                        is_wide: false,
                                    },
                                },
                            ],
                        },
                    ),
                },
                Allocation {
                    name: "__complexFunc1",
                    reference_type: "STRING",
                },
                CallStatement {
                    operator: ReferenceExpr {
                        kind: Member(
                            Identifier {
                                name: "complexFunc",
                            },
                        ),
                        base: None,
                    },
                    parameters: Some(
                        ExpressionList {
                            expressions: [
                                Assignment {
                                    left: ReferenceExpr {
                                        kind: Member(
                                            Identifier {
                                                name: "complexFunc",
                                            },
                                        ),
                                        base: None,
                                    },
                                    right: ReferenceExpr {
                                        kind: Member(
                                            Identifier {
                                                name: "__complexFunc1",
                                            },
                                        ),
                                        base: None,
                                    },
                                },
                                Assignment {
                                    left: ReferenceExpr {
                                        kind: Member(
                                            Identifier {
                                                name: "x",
                                            },
                                        ),
                                        base: None,
                                    },
                                    right: ReferenceExpr {
                                        kind: Member(
                                            Identifier {
                                                name: "__complexFunc0",
                                            },
                                        ),
                                        base: None,
                                    },
                                },
                            ],
                        },
                    ),
                },
                Assignment {
                    left: ReferenceExpr {
                        kind: Member(
                            Identifier {
                                name: "a",
                            },
                        ),
                        base: None,
                    },
                    right: ReferenceExpr {
                        kind: Member(
                            Identifier {
                                name: "__complexFunc1",
                            },
                        ),
                        base: None,
                    },
                },
            ],
        },
    ],
    location: SourceLocation {
        span: Range(
            TextLocation {
                line: 16,
                column: 12,
                offset: 481,
            }..TextLocation {
                line: 16,
                column: 61,
                offset: 530,
            },
        ),
    },
    name_location: SourceLocation {
        span: Range(
            TextLocation {
                line: 8,
                column: 17,
                offset: 168,
            }..TextLocation {
                line: 8,
                column: 21,
                offset: 172,
            },
        ),
    },
    overriding: false,
    generic: false,
    access: None,
}
