src/lowering/snapshots/rusty__lowering__calls__tests__function_with_explicit_call_statement_has_explicit_return.snap
---
source: src/lowering/calls.rs
expression: "index.find_pou_type(\"foo\").unwrap()"
---
DataType {
    name: "foo",
    initial_value: None,
    information: Struct {
        name: "foo",
        members: [
            VariableIndexEntry {
                name: "foo",
                qualified_name: "foo.foo",
                initial_value: None,
                argument_type: ByRef(
                    InOut,
                ),
                is_constant: false,
                is_var_external: false,
                is_retain: false,
                data_type_name: "__auto_pointer_to_STRING",
                location_in_parent: 0,
                linkage: Internal,
                binding: None,
                source_location: SourceLocation {
                    span: Range(1:17 - 1:20),
                    file: Some(
                        "<internal>",
                    ),
                },
                varargs: None,
            },
            VariableIndexEntry {
                name: "x",
                qualified_name: "foo.x",
                initial_value: None,
                argument_type: ByVal(
                    Input,
                ),
                is_constant: false,
                is_var_external: false,
                is_retain: false,
                data_type_name: "DINT",
                location_in_parent: 1,
                linkage: Internal,
                binding: None,
                source_location: SourceLocation {
                    span: Range(3:12 - 3:13),
                    file: Some(
                        "<internal>",
                    ),
                },
                varargs: None,
            },
        ],
        source: Pou(
            Function,
        ),
    },
    nature: Any,
    location: SourceLocation {
        span: Range(1:17 - 1:20),
        file: Some(
            "<internal>",
        ),
    },
}
