src/lowering/snapshots/rusty__lowering__calls__tests__function_with_simple_return_not_changed-2.snap
---
source: src/lowering/calls.rs
expression: "lowerer.index.find_pou_type(\"simpleFunc\").unwrap()"
---
DataType {
    name: "simpleFunc",
    initial_value: None,
    information: Struct {
        name: "simpleFunc",
        members: [
            VariableIndexEntry {
                name: "x",
                qualified_name: "simpleFunc.x",
                initial_value: None,
                argument_type: ByVal(
                    Input,
                ),
                is_constant: false,
                is_var_external: false,
                data_type_name: "DINT",
                location_in_parent: 0,
                linkage: Internal,
                binding: None,
                source_location: SourceLocation {
                    span: Range(
                        TextLocation {
                            line: 3,
                            column: 12,
                            offset: 66,
                        }..TextLocation {
                            line: 3,
                            column: 13,
                            offset: 67,
                        },
                    ),
                },
                varargs: None,
            },
            VariableIndexEntry {
                name: "simpleFunc",
                qualified_name: "simpleFunc.simpleFunc",
                initial_value: None,
                argument_type: ByVal(
                    Return,
                ),
                is_constant: false,
                is_var_external: false,
                data_type_name: "DINT",
                location_in_parent: 1,
                linkage: Internal,
                binding: None,
                source_location: SourceLocation {
                    span: Range(
                        TextLocation {
                            line: 1,
                            column: 17,
                            offset: 18,
                        }..TextLocation {
                            line: 1,
                            column: 27,
                            offset: 28,
                        },
                    ),
                },
                varargs: None,
            },
        ],
        source: Pou(
            Function,
        ),
    },
    nature: Any,
    location: SourceLocation {
        span: Range(
            TextLocation {
                line: 1,
                column: 17,
                offset: 18,
            }..TextLocation {
                line: 1,
                column: 27,
                offset: 28,
            },
        ),
    },
}
