src/lowering/snapshots/rusty__lowering__calls__tests__function_with_simple_return_not_changed.snap
---
source: src/lowering/calls.rs
expression: "lowerer.index.unwrap().find_pou_type(\"simpleFunc\").unwrap()"
---
DataType {
    name: "simpleFunc",
    initial_value: None,
    information: Struct {
        name: "simpleFunc",
        members: [
            VariableIndexEntry {
                name: "x",
                qualified_name: "simpleFunc.x",
                initial_value: None,
                argument_type: ByVal(
                    Input,
                ),
                is_constant: false,
                is_var_external: false,
                data_type_name: "DINT",
                location_in_parent: 0,
                linkage: Internal,
                binding: None,
                source_location: SourceLocation {
                    span: Range(3:12 - 3:13),
                    file: Some(
                        "<internal>",
                    ),
                },
                varargs: None,
            },
            VariableIndexEntry {
                name: "simpleFunc",
                qualified_name: "simpleFunc.simpleFunc",
                initial_value: None,
                argument_type: ByVal(
                    Return,
                ),
                is_constant: false,
                is_var_external: false,
                data_type_name: "DINT",
                location_in_parent: 1,
                linkage: Internal,
                binding: None,
                source_location: SourceLocation {
                    span: Range(1:17 - 1:27),
                    file: Some(
                        "<internal>",
                    ),
                },
                varargs: None,
            },
        ],
        source: Pou(
            Function,
        ),
    },
    nature: Any,
    location: SourceLocation {
        span: Range(1:17 - 1:27),
        file: Some(
            "<internal>",
        ),
    },
    linkage: Internal,
}
