src/lowering/snapshots/rusty__lowering__calls__tests__function_with_string_return_is_changed-2.snap
---
source: src/lowering/calls.rs
expression: "lowerer.index.unwrap().find_pou_type(\"complexType\").unwrap()"
---
DataType {
    name: "complexType",
    initial_value: None,
    information: Struct {
        name: "complexType",
        members: [
            VariableIndexEntry {
                name: "complexType",
                qualified_name: "complexType.complexType",
                initial_value: None,
                argument_type: ByRef(
                    InOut,
                ),
                is_constant: false,
                is_var_external: false,
                is_retain: false,
                data_type_name: "__auto_pointer_to_STRING",
                location_in_parent: 0,
                linkage: Internal,
                binding: None,
                source_location: SourceLocation {
                    span: Range(1:17 - 1:28),
                    file: Some(
                        "<internal>",
                    ),
                },
                varargs: None,
            },
            VariableIndexEntry {
                name: "x",
                qualified_name: "complexType.x",
                initial_value: None,
                argument_type: ByVal(
                    Input,
                ),
                is_constant: false,
                is_var_external: false,
                is_retain: false,
                data_type_name: "DINT",
                location_in_parent: 1,
                linkage: Internal,
                binding: None,
                source_location: SourceLocation {
                    span: Range(3:12 - 3:13),
                    file: Some(
                        "<internal>",
                    ),
                },
                varargs: None,
            },
        ],
        source: Pou(
            Function,
        ),
    },
    nature: Any,
    location: SourceLocation {
        span: Range(1:17 - 1:28),
        file: Some(
            "<internal>",
        ),
    },
}
